# torchcomms

./: .build_ncclx.sh.swp  .gitignore  .lintrunner.toml  .pyre_configuration  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  build_ncclx.sh  build_rccl.sh  build_rcclx.sh  conftest.py  dev-requirements.txt  index.html  pyproject.toml  rccl_builder.sh  rcclx_builder.sh  rename_symbols.sh  requirements.txt  robots.txt  setup.py  setup_rcclx.sh  start.sh  sync_to_oss.sh
comms/analyzer/if/: CMakeLists.txt  CommsTracingService.thrift  NCCLAnalyzerState.thrift  NCCLAnalyzerVerdict.thrift
comms/cca4py/: cca4py.cpp  pyproject.toml  setup.py
comms/common/fault_tolerance/: Abort.cc  Abort.h  CMakeLists.txt
comms/ctran/: CMakeLists.txt  Ctran.cc  Ctran.h  CtranComm.h  CtranCommSplit.cc  CtranCommSplit.h  CtranEx.cc  CtranEx.h  CtranExImpl.h  CtranExRequest.cc  CtranPipes.cc  CtranPipes.h  CudagraphDeferredCleanup.cc  CudagraphDeferredCleanup.h  OPTIMIZATION_LOG.md  PLAN.md  README.md
comms/ctran/algos/: Barrier.cu  Checksum.cu  Checksum.cuh  CollUtils.h  CtranAlgo.cc  CtranAlgo.h  CtranAlgoArgDev.h  CtranAlgoConsts.h  CtranAlgoDev.h  CudaGraphUtilsImpl.cc  DevAlgoImpl.cuh  DevCommon.cuh  DevShmState.cu  DevShmState.cuh  IPersistPlan.h  PersistentCleanup.h  barrier.cuh  bcast.cuh  genctran.py  localReduce.cuh
comms/ctran/backends/: CtranAux.h  CtranCtrl.cc  CtranCtrl.h
comms/ctran/benchmarks/: AllGatherBench.cc  AllReduceBenchmark.cc  AllToAllPBench.cc  AllgatherPBench.cc  README.md
comms/ctran/bootstrap/: AbortableSocket.cc  AbortableSocket.h  AsyncSocket.cc  AsyncSocket.h  IBootstrap.h  ICtranBootstrap.h  ISocket.h  ISocketFactory.h  Socket.cc  Socket.h
comms/ctran/cogwheel/: comms_dist_test.py  comms_mast.py  manual_launch.py
comms/ctran/colltrace/: CollTraceWrapper.cc  CollTraceWrapper.h  MapperTrace.cc  MapperTrace.h
comms/ctran/commstate/: CommStateX.cc  CommStateX.h  CommStateXDev.h  Topology.cc  Topology.h
comms/ctran/docs/: pipes-migration.md
comms/ctran/gpe/: CtranChecksum.h  CtranGpe.cc  CtranGpe.h  CtranGpeColltrace.h  CtranGpeDev.h  CtranGpeImpl.cc  CtranGpeImpl.h  GpeDeviceRing.cc  GpeDeviceRing.h
comms/ctran/hints/: HintUtils.cc  HintUtils.h  Hints.cc  Hints.h
comms/ctran/ibverbx/: Coordinator.cc  Coordinator.h  DqplbSeqTracker.h  IbvAh.cc  IbvCommon.cc  IbvCommon.h  IbvCq.cc  IbvCq.h  IbvDevice.cc  IbvDevice.h  IbvMr.cc  IbvMr.h  IbvPd.cc  IbvPd.h  IbvQp.cc  IbvQp.h  IbvQpUtils.cc  IbvQpUtils.h  IbvSrq.cc  IbvVirtualCq.cc  IbvVirtualCq.h  IbvVirtualQp.cc  IbvVirtualQp.h  IbvVirtualWr.h  Ibvcore.h  Ibverbx.cc  Ibverbx.h  IbverbxSymbols.cc  IbverbxSymbols.h  Mlx5core.h  Mlx5dv.cc  Mlx5dv.h  README.md
comms/ctran/interfaces/: IBootstrap.h  ICtran.h
comms/ctran/mapper/: CtranMapper.cc  CtranMapper.h  CtranMapperImpl.cc  CtranMapperImpl.h  CtranMapperRegMem.cc  CtranMapperRegMem.h  CtranMapperRequest.cc  CtranMapperTypes.h
comms/ctran/memory/: SlabAllocator.cc  SlabAllocator.h  Utils.cc  Utils.h  memCacheAllocator.cc  memCacheAllocator.h
comms/ctran/prims/: BarrierState.cuh  ChunkState.cuh  CopyOp.cuh  CopyUtils.cuh  CudaDriverLazy.cc  CudaDriverLazy.h  DeviceCheck.cuh  DeviceMacros.cuh  DeviceSpan.cuh  DocaHostUtils.h  DocaVerbsUtils.cuh  GpuMemHandler.cc  GpuMemHandler.h  IbgdaBuffer.h  IbverbsLazy.cc  IbverbsLazy.h  MemcpyCopyOp.cuh  MultiPeerDeviceHandle.cuh  MultiPeerNvlTransport.cc  MultiPeerNvlTransport.h  MultiPeerTransport.cc  MultiPeerTransport.h  MultipeerIbgdaDeviceTransport.cuh  MultipeerIbgdaTransport.cc  MultipeerIbgdaTransport.h  MultipeerIbgdaTransportCuda.cu  MultipeerIbgdaTransportCuda.cuh  NvmlFabricInfo.h  P2pIbgdaTransportDevice.cuh  P2pNvlTransportDevice.cuh  P2pSelfTransportDevice.cuh  PipesTrace.cc  PipesTrace.h  PipesTraceTypes.h  SignalState.cuh  ThreadGroup.cuh  Tile.cuh  TiledBuffer.cuh  Timeout.cuh  TimeoutUtils.h  (+3 more)
comms/ctran/profiler/: AlgoProfilerModule.cc  AlgoProfilerModule.h  AlgoProfilerReport.h  CtranProfiler.cc  CtranProfiler.h  CtranProfilerSlowRankModule.cc  CtranProfilerSlowRankModule.h  DefaultGpeProfilerReporter.cc  DefaultGpeProfilerReporter.h  GpeProfiler.cc  GpeProfiler.h  GpeProfilerReport.h  IAlgoProfilerReporter.h  IGpeProfilerReporter.h  NcclxAlgoProfilerReporter.cc  NcclxAlgoProfilerReporter.h  Profiler.cc  Profiler.h  QueuePairProfilerModule.cc  QueuePairProfilerModule.h  SamplingRegistry.cc  SamplingRegistry.h
comms/ctran/regcache/: IpcRegCache.cc  IpcRegCache.h  IpcRegCacheBase.h  IpcRegCacheTypes.h  RegCache.cc  RegCache.h
comms/ctran/tests/: AllGatherTestSuiteBase.h  AllReduceTestSuite.cc  AllReduceTestSuiteBase.h  AllReduceTreeTestKernels.cu  (+65 more)
comms/prims/: BarrierState.cuh  CMakeLists.txt  ChunkState.cuh  CopyOp.cuh  CopyUtils.cuh  CudaDriverLazy.cc  CudaDriverLazy.h  DeviceCheck.cuh  DeviceMacros.cuh  DeviceSpan.cuh  DocaHostUtils.h  GpuMemHandler.cc  GpuMemHandler.h  IbgdaBuffer.h  IbverbsLazy.cc  IbverbsLazy.h  MemcpyCopyOp.cuh  MultiPeerDeviceHandle.cuh  MultiPeerNvlTransport.cc  MultiPeerNvlTransport.h  MultiPeerTransport.cc  MultiPeerTransport.h  MultipeerIbgdaDeviceTransport.cuh  MultipeerIbgdaTransport.cc  MultipeerIbgdaTransport.h  MultipeerIbgdaTransportCuda.cu  MultipeerIbgdaTransportCuda.cuh  P2pIbgdaTransportDevice.cuh  P2pNvlTransportDevice.cuh  P2pSelfTransportDevice.cuh  PipesTrace.cc  PipesTrace.h  PipesTraceTypes.h  SignalState.cuh  ThreadGroup.cuh  Tile.cuh  TiledBuffer.cuh  Timeout.cuh  TimeoutUtils.h  TopologyDiscovery.cc  (+2 more)
comms/uniflow/: CMakeLists.txt  Connection.cpp  Connection.h  MultiTransport.cpp  MultiTransport.h  Result.h  Segment.cpp  Segment.h  Uniflow.cpp  UniflowPy.cpp  __init__.py  _core.pyi
comms/utils/: CMakeLists.txt  CommsMaybeChecks.h  Conversion.cc  Conversion.h  CudaChecks.h  CudaRAII.cc  CudaRAII.h  EnvUtils.cc  EnvUtils.h  GpuClockCalibration.cc  GpuClockCalibration.h  GraphCaptureSideStream.cc  HRDWRingBuffer.cu  HRDWRingBuffer.h  HRDWRingBufferReader.h  InitFolly.cc  InitFolly.h  MemUtils.cc  MemUtils.h  PrecisionClock.cc  PrecisionClock.h  RankUtils.cc  RankUtils.h  StrUtils.h  TypeUtils.h  checks.h  commSpecs.cc  commSpecs.h
(+7573 files in other folders)
