[project]
name = "cca4py"
version = "0.1.0"
requires-python = ">=3.10"
description = "CCA4Py: PyTorch CUDACachingAllocator <-> NCCL memory registration"
license = "MIT"
authors = [
    { name = "Meta Platforms, Inc." }
]

[build-system]
requires = [
    "setuptools>=77.0.3",
    "pybind11>=2.11",
]
build-backend = "setuptools.build_meta"
