[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.13.6"]
build-backend = "setuptools.build_meta"

[project]
name = "ncclx_trainer_context"
dynamic = ["version"]
description = "NCCLX Python trainer context bindings"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}

[tool.setuptools]
zip-safe = false
